--- a/migration-newip-to-ts/src/global.css
+++ b/migration-newip-to-ts/src/global.css
@@ -1,3 +1,7 @@
+* {
+  box-sizing: border-box;
+}
+
 body {
   color: #fff;
   background: #17181c;
@@ -6,6 +10,10 @@ body {
 
 header {
   padding: 10px 30px;
+}
+
+main {
+  display: flex;
 }
 
 header h1 {
