--- a/migration-newip-to-ts/src/global.css
+++ b/migration-newip-to-ts/src/global.css
@@ -12,10 +12,6 @@ header {
   padding: 10px 30px;
 }
 
-main {
-  display: flex;
-}
-
 header h1 {
   font-size: 40px;
   font-weight: 800;
@@ -42,6 +38,10 @@ footer .copyright:before {
   content: '©';
 }
 
+.news-wrapper {
+  display: flex;
+}
+
 .footer__wrapper {
   display: flex;
   gap: 40px;
@@ -65,6 +65,40 @@ footer .copyright:before {
   background-repeat: no-repeat;
   background-position: center;
   background-size: contain;
+}
+
+.burger {
+  width: 40px;
+  height: 40px;
+  display: none;
+  cursor: pointer;
+  position: relative;
+}
+
+.span, 
+.span::before,
+.span::after {
+  width: 100%;
+  height: 3px;
+  background-color: #3fcc59;
+  transition: all .5s ease;
+  position: absolute;
+}
+
+.span::before {
+  content: '';
+  top: 10px;
+}
+
+.span::after {
+  content: '';
+  top: -10px;
+}
+
+@media (max-width: 767px) {
+  .burger {
+    display: block;
+  }
 }
 
 
