--- a/migration-newip-to-ts/src/global.css
+++ b/migration-newip-to-ts/src/global.css
@@ -23,17 +23,21 @@ footer {
   align-items: center;
   justify-content: center;
 }
+
 footer .copyright {
   font-size: 14px;
   color: #333;
   text-align: center;
 }
+
 footer .copyright a {
   color: #444;
 }
+
 footer .copyright a:hover {
   color: #555;
 }
+
 footer .copyright:before {
   content: '©';
 }
@@ -81,7 +85,7 @@ footer .copyright:before {
 .span::after {
   width: 100%;
   height: 3px;
-  background-color: #3fcc59;
+  background-color: #30c5ff;
   transition: all .5s ease;
   position: absolute;
 }
@@ -107,6 +111,7 @@ footer .copyright:before {
     width: 100px;
     height: 30px;
   }
+
   .footer__wrapper {
     gap: 20px;
   }
