--- a/online-store/src/styles/main.scss
+++ b/online-store/src/styles/main.scss
@@ -8,7 +8,7 @@
   padding: 0;
 }
 
-body {
+.body {
   background-color: #FFFAF0;
   font-family: 'San Francisco', sans-serif;
   font-weight: 400;
@@ -16,10 +16,12 @@ body {
 
 .header {
   padding: 1.5rem;
+  margin-bottom: 5rem;
 
   &__wrapper {
     display: flex;
     justify-content: space-between;
+    margin: 0 auto;
   }
 
   &__left-side,
@@ -49,6 +51,7 @@ body {
     width: 16rem;
     padding: 0.5rem;
     border-radius: 5%;
+    box-shadow: 0.2rem 0.2rem 0.2rem 0.1rem rgba(0, 0, 0, 0.2);
   }
 
   &__shopcart {
@@ -62,6 +65,60 @@ body {
   }
 }
 
+.main {
+  min-height: calc(100vh - 14rem);
+
+  &__wrapper {
+    display: flex;
+    justify-content: space-between;
+    margin: 0 auto;
+    max-width: 115rem;
+  }
+}
+
+.aside {
+  max-width: 30rem;
+  padding: 1.5rem;
+}
+
+.choose-quality,
+.choose-color {
+  display: flex;
+  flex-direction: column;
+
+  &__title {
+    margin-bottom: 1.5rem;
+  }
+
+  &__checkbox {
+    margin-bottom: 1rem;
+    cursor: pointer;
+  }
+}
+
+.choose-color {
+  margin-bottom: 1.5rem;
+}
+
+.sortby {
+  display: flex;
+  flex-direction: column;
+  margin-bottom: 1.5rem;
+
+  &__title {
+    margin-bottom: 1.5rem;
+  }
+
+  &__select {
+    height: 2.5rem;
+    width: 16rem;
+    padding: 0.5rem;
+    border-radius: 5%;
+    cursor: pointer;
+    box-shadow: 0.2rem 0.2rem 0.2rem 0.1rem rgba(0, 0, 0, 0.2);
+  }
+}
+
 .footer {
   padding: 1.5rem;
 
@@ -70,6 +127,7 @@ body {
     justify-content: center;
     align-items: center;
     gap: 2rem;
+    margin: 0 auto;
   }
 
   &__git {
