--- a/online-store/src/styles/main.scss
+++ b/online-store/src/styles/main.scss
@@ -1,4 +1,5 @@
 @import './fonts.scss';
+@import 'nouislider/dist/nouislider.css';
 
 *, 
 *::after,
@@ -67,6 +68,7 @@
 
 .main {
   min-height: calc(100vh - 14rem);
+  margin-bottom: 5rem;
 
   &__wrapper {
     display: flex;
@@ -117,6 +119,73 @@
     cursor: pointer;
     box-shadow: 0.2rem 0.2rem 0.2rem 0.1rem rgba(0, 0, 0, 0.2);
   }
+}
+
+.sortby-slide {
+
+  &__wrapper {
+    display: flex;
+    flex-direction: column;
+  }
+
+  &__title {
+    margin-bottom: 1.5rem;
+  }
+
+  &__subtitle {
+    margin-bottom: 3rem;
+  }
+
+  &__slider {
+    margin-bottom: 2rem;
+  }
+}
+
+.noUi-target {
+  background: #DAA520;
+  border-radius: 5%;
+  border: none;
+  box-shadow: none;
+  height: 0.2rem;
+}
+
+.noUi-connect {
+  background: #DAA520;
+}
+
+.noUi-handle {
+  border: 3px solid #DAA520;
+  border-radius: 50%;
+  background: #FFFAF0;
+  cursor: pointer;
+  box-shadow: none;
+}
+
+.noUi-handle::after,
+.noUi-handle::before {
+  display: none;
+}
+
+.noUi-horizontal .noUi-handle {
+  width: 2rem;
+  height: 1.5rem;
+  right: 0;
+  top: -0.7rem;
+}
+
+.noUi-horizontal .noUi-handle-lower {
+  right: -2rem;
+}
+
+.noUi-tooltip {
+  display: block;
+  position: absolute;
+  border: none;
+  background: #FFFAF0;
+  color: #000;
+  padding: 5px;
+  text-align: center;
+  white-space: nowrap;
 }
 
 .footer {
