--- a/online-store/src/styles/main.scss
+++ b/online-store/src/styles/main.scss
@@ -72,9 +72,9 @@
 
   &__wrapper {
     display: flex;
-    justify-content: space-between;
     margin: 0 auto;
     max-width: 115rem;
+    gap: 4rem;
   }
 }
 
@@ -186,6 +186,57 @@
   padding: 5px;
   text-align: center;
   white-space: nowrap;
+}
+
+.content {
+  display: flex;
+  flex-wrap: wrap;
+  gap: 2rem;
+  max-width: 70rem;
+}
+
+.card {
+  border: 3px solid #B8860B;
+  min-width: 11rem;
+  min-height: 15rem;
+  display: flex;
+  flex-direction: column;
+  transition: all 1s ease;
+  background-color: #DEB887;
+  box-shadow: 0.2rem 0.2rem 0.2rem 0.1rem rgba(0, 0, 0, 0.2);
+  cursor: pointer;
+
+  &__img {
+    width: 9rem;
+    height: 9rem;
+    background-size: contain;
+    background-repeat: no-repeat;
+    background-position: center;
+  }
+
+  &__list {
+    display: flex;
+    flex-direction: column;
+    list-style-type: none;
+    padding: 1rem;
+    justify-content: center;
+  }
+}
+
+.red-box {
+  background-image: url(../assets/img/red-box.jpg);
+}
+
+.blue-box {
+  background-image: url(../assets/img/blue-box.jpg);
+}
+
+.green-box {
+  background-image: url(../assets/img/green-box.jpg);
+}
+
+.list__item {
+  margin-bottom: 0.3rem;
 }
 
 .footer {
