--- a/online-store/src/styles/main.scss
+++ b/online-store/src/styles/main.scss
@@ -197,8 +197,8 @@
 
 .card {
   border: 3px solid #B8860B;
-  min-width: 11rem;
-  min-height: 15rem;
+  width: 11rem;
+  height: 21rem;
   display: flex;
   flex-direction: column;
   transition: all 1s ease;
