--- a/online-store/src/styles/main.scss
+++ b/online-store/src/styles/main.scss
@@ -22,13 +22,11 @@
   &__wrapper {
     display: flex;
     justify-content: space-between;
-    margin: 0 auto;
   }
 
   &__left-side,
   &__right-side {
     display: flex;
-    justify-content: space-between;
     align-items: center;
     gap: 5rem;
   }
@@ -265,7 +263,6 @@
     justify-content: center;
     align-items: center;
     gap: 2rem;
-    margin: 0 auto;
   }
 
   &__git {
@@ -295,10 +292,10 @@
   box-shadow: 0 0.2rem 0.7rem 0.7rem rgb(218 165 32 / 70%);
 }
 
-.hidden {
+.transformed {
   transform: scale(0);
 }
 
-.very-hidden {
+.hidden {
   display: none;
 }
