--- a/online-store/src/styles/main.scss
+++ b/online-store/src/styles/main.scss
@@ -61,6 +61,7 @@
     width: 6rem;
     max-width: 6rem;
     height: 6rem;
+    cursor: pointer;
   }
 }
 
@@ -232,6 +233,11 @@
     display: flex;
     align-items: center;
     justify-content: center;
+    transition: all .3s ease;
+  }
+
+  &__span:hover {
+    font-size: 1.5rem;
   }
 }
 
