--- a/online-store/src/styles/main.scss
+++ b/online-store/src/styles/main.scss
@@ -145,7 +145,7 @@
 }
 
 .noUi-target {
-  background: #000000;
+  background: rgba(218, 165, 32, 0.5);
   border-radius: 5%;
   border: none;
   box-shadow: none;
