feat: add some hover effects

--- a/online-store/src/styles/main.scss
+++ b/online-store/src/styles/main.scss
@@ -105,6 +105,15 @@
   margin-bottom: 1.5rem;
 }
 
+.label {
+  max-width: 6rem;
+  cursor: pointer;
+}
+
+.label:hover {
+  font-weight: 500;
+}
+
 .sortby {
   display: flex;
   flex-direction: column;
